<resources>
    <string name="app_name">Lec2Demo</string>
    <string name="txtTitle">Concert Booking</string>
    <string name="txtNumTickets">Number of Tickets</string>
    <string name="txtSpinnerPrompt">Concert Type</string>
    <string name="txtConcertImage">Concert</string>
    <string name="txtCalcCost">Calculate Cost and show summary</string>
    <string-array name="concertTypes">
        <item>Rock Band</item>
        <item>Jazz Band</item>
        <item>Blues Band</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>